RESOLVED FIXED282407
Fix smart pointer warnings in MediaSource.cpp, ScopedRenderingResourcesRequestCocoa.mm, WebExtensionContextCocoa.mm, and RemoteDeviceProxy.cpp
https://bugs.webkit.org/show_bug.cgi?id=282407
Summary Fix smart pointer warnings in MediaSource.cpp, ScopedRenderingResourcesReques...
Ryosuke Niwa
Reported 2024-10-31 13:49:08 PDT
Fix smart pointer warnings.
Attachments
Ryosuke Niwa
Comment 1 2024-10-31 13:54:09 PDT
EWS
Comment 2 2024-10-31 15:56:04 PDT
Committed 285982@main (18a54579d3ec): <https://commits.webkit.org/285982@main> Reviewed commits have been landed. Closing PR #36015 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-10-31 15:57:13 PDT
Note You need to log in before you can comment on or make changes to this bug.