Fix smart pointer warnings in MediaSource.cpp, ScopedRenderingResourcesRequestCocoa.mm, WebExtensionContextCocoa.mm, and RemoteDeviceProxy.cpp https://bugs.webkit.org/show_bug.cgi?id=282407

Reviewed by Geoffrey Garen.

(WebCore::MediaSource::addSourceBuffer):
(WebCore::MediaSource::removeSourceBufferWithOptionalDestruction):
(WebCore::MediaSource::failedToCreateRenderer):
* Source/WebKit/GPUProcess/graphics/ScopedRenderingResourcesRequestCocoa.mm:
(WebKit::ScopedRenderingResourcesRequest::scheduleFreeRenderingResources):
* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionContextCocoa.mm:
(WebKit::WebExtensionContext::loadBackgroundWebView):
(WebKit::WebExtensionContext::loadInspectorBackgroundPage):
* Source/WebKit/WebProcess/GPU/graphics/WebGPU/RemoteDeviceProxy.cpp:
(WebKit::WebGPU::RemoteDeviceProxy::createCommandEncoder):

Canonical link: https://commits.webkit.org/285982@main